# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.993.2.124 2010-03-29 17:36:08 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.4.8 (2010/??/??)
 - (2010/03/29) Improved handling of the StateType attribute of
    StateGetStatesByType() in Kernel/System/State.pm.
 - (2010/03/24) Fixed bug#5164 - Pending time not working if agent as an other
    timezone.
 - (2010/03/19) Fixed bug#5094 - Bulk pending date/time do not get applied to
    tickets.
 - (2010/03/18) Updated Ukrainian language translation, thanks to Belskii Artem!
 - (2010/03/10) Fixed bug#4416 - Merge: whitespace before ticketnumber not removed.
 - (2010/03/09) Fixed bug#5085 - Wrong colours codes in Stats::Graph::dclrs
 - (2010/03/08) Fixed bug#5102 - Notification sent to OTRS instead of Customer
 - (2010/03/04) Fixed bug#5044 - Missing translation in ticket history after
    responsible update.
 - (2010/03/02) Updated Czech translation, thanks to O2BS.com, s r.o. Jakub Hanus!
 - (2010/02/26) Fixed bug#4137 - Follow ups to internal forwarded message marked
    as customer reply.
 - (2010/02/23) Updated pt_BR translation file, thanks to Fabricio Luiz Machado!
 - (2010/02/22) Fixed bug#5020 - Framework version for stats export is outdated.
 - (2010/02/18) Fixed bug#4969 - Event Based Notification: Body Match field displays
    Subject Match value.
 - (2010/02/16) Fixed bug#4967 - Can't locate object method "new" via package
    error when using Perl 5.10.1.
 - (2010/02/15) Fixed bug#4977 - mod_perl is not used in fedora with RPM.
 - (2010/02/12) Fixed bug#4936 - Kernel::System::Main::FileWrite has race condition.
 - (2010/02/11) Fixed bug#4442 - Customer search fails when there is a space
    in the name.