@@ -2,7 +2,7 @@
 # Kernel/Modules/AgentTicketCompose.pm - to compose and send a message
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: AgentTicketCompose.pm,v 1.81.2.8 2010-04-01 17:59:52 martin Exp $
+# $Id: AgentTicketCompose.pm,v 1.81.2.9 2010-04-01 19:14:38 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -24,7 +24,7 @@ use Kernel::System::TemplateGenerator;
 use Mail::Address;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.81.2.8 $) [1];
+$VERSION = qw($Revision: 1.81.2.9 $) [1];
 
 sub new {
     my ( $Type, %Param ) = @_;
@@ -1014,8 +1014,8 @@ sub _Mask {
         $Param{NextStates}->{''} = '-';
     }
     my %State;
-    if ( $Param{GetParams}->{StateID} ) {
-        $State{SelectedID} = $Param{GetParams}->{StateID};
+    if ( $Param{GetParam}->{StateID} ) {
+        $State{SelectedID} = $Param{GetParam}->{StateID};
     }
     else {
         $State{Selected} = $Param{NextState} || $Self->{Config}->{StateDefault};
