@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.993.2.124 2010-03-29 17:36:08 mh Exp $
+# $Id: CHANGES,v 1.993.2.125 2010-04-01 19:14:36 martin Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.4.8 (2010/??/??)
+ - (2010/04/01) Fixed bug#4786 - AgentTicketCompose ONLY: Defining a next state,
+    then adding and attachment, resets the next state upon screen refresh.
  - (2010/03/29) Improved handling of the StateType attribute of
     StateGetStatesByType() in Kernel/System/State.pm.
  - (2010/03/24) Fixed bug#5164 - Pending time not working if agent as an other
